# RayTracerX

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  configure.bat  main.cpp  vcpkg.bat
cmake/: clang-cxx-dev-tools.cmake
shaders/: raytrace.comp.glsl
